--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.14.4"
