--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.14.4",
