--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "homepage": "https://github.com/gabe-1byte/myFlix-client#readme",
   "description": "",
   "dependencies": {
+    "@reduxjs/toolkit": "2.8.2",
     "bootstrap": "^5.2.0",
     "prop-types": "^15.8.1",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.14.4",
