--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/gabe-1byte/myFlix-client#readme",
   "description": "",
   "dependencies": {
+    "@parcel/watcher": "^2.5.1",
     "@reduxjs/toolkit": "2.8.2",
     "@vue/compiler-sfc": "^3.5.16",
     "bootstrap": "^5.2.0",
