--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@parcel/watcher": "^2.5.1",
     "@reduxjs/toolkit": "2.8.2",
+    "@swc/core": "^1.12.0",
     "@vue/compiler-sfc": "^3.5.16",
     "bootstrap": "^5.2.0",
     "prop-types": "^15.8.1",
